Improvements in documentation Removed references to kubectl Added handling binding and mysql connection details with cf command